1.0d:
Sam Lantinga - Sun Nov 19 15:38:49 PST 2000
 * Added nice mirror control buttons for the download dialogs
Sam Lantinga - Sat Nov 18 16:56:40 PST 2000
 * Catch all updates for a product in an update list.
 * Added "Mirror:" keyword support in update lists.
Sam Lantinga - Sat Nov 18 15:58:55 PST 2000
 * Added arrow blinking at the end of a set of updates.
 * Added more detailed messages during update verification.
 * Added loading keyserver support (list in ~/.loki/loki_update/keyservers.txt)